--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1800,8 +1800,9 @@
 /* Box */
 
 	.box {
-		margin-bottom: 2rem;
+		margin-bottom: 1rem;
 		background: #FFF;
+		border-color: rgba(144, 144, 144, 0.25);
 	}
 
 		.box .content {
@@ -1813,25 +1814,25 @@
 		.box > :last-child > :last-child > :last-child {
 			margin-bottom: 0;
 		}
-
+/*
 		.box.alt {
 			border: 0;
 			border-radius: 0;
 			padding: 0;
 		}
-
+*/
 		@media screen and (max-width: 736px) {
 
 			.box .content {
-				padding: 2rem;
+				padding: 1.5rem;
 			}
 
 		}
-
+/*
 	.box {
 		border-color: rgba(144, 144, 144, 0.25);
 	}
-
+*/
 /* Button */
 
 	input[type="submit"],
@@ -3671,7 +3672,6 @@
 			right: 0;
 			text-align: right;
 			top: 0;
-			vertical-align: middle;
 			width: 7em;
 		}
 
